; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_get_mod_mask.c_aio_get_mod_mask_for.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_get_mod_mask.c_aio_get_mod_mask_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aio_get_mod_mask_for(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %9 = load i32, i32* @conn, align 4
  %10 = call i32 @xcb_flush(i32 %9)
  %11 = load i32, i32* @conn, align 4
  %12 = call i32 @xcb_get_modifier_mapping(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* @conn, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32* @xcb_get_modifier_mapping_reply(i32 %13, i32 %14, i32* null)
  store i32* %15, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @get_mod_mask_for(i32 %19, i32* %20, i32* %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @free(i32* %23)
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @xcb_flush(i32) #1

declare dso_local i32 @xcb_get_modifier_mapping(i32) #1

declare dso_local i32* @xcb_get_modifier_mapping_reply(i32, i32, i32*) #1

declare dso_local i32 @get_mod_mask_for(i32, i32*, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
